--- a/styles/style.css
+++ b/styles/style.css
@@ -7,8 +7,12 @@
 
 body {
     font-family: var(--default-font);
+    margin: 0;
 }
 
+.content-wrapper{
+    margin: 0 auto;
+}
 
 h1, h2, h3, h4, h5, h6 {
     color: var(--secondary-color);
@@ -24,6 +28,52 @@ p {
 img{
     width: 550px;
 }
+
+footer {
+    background-color: var(--branding-color);
+    background-size: 100%;;
+    padding: 15px 0;
+    margin: 0 -400px;
+}
+
+.footer-text {
+   font-size:16px; 
+  
+}
+
+.footer-text a{
+    font-size:16px; 
+   text-decoration: none;
+   color: var(--secondary-color);
+}
+
+footer .email-link{
+    text-decoration: none;
+    color: black;
+    font-size: 24px;
+}
+
+footer .email-link:hover{
+    color:var(--secondary-color); 
+    text-decoration: underline;
+}
+
+footer .social-links a {
+ margin: 0 20px;
+ color: var(--branding-color);
+ background-color: var(--secondary-color);
+ padding: 10px 14px;
+ font-size: 18px;
+ border-radius: 50%;
+ transition: all 150ms ease-in-out;
+}
+
+footer .social-links a:hover {
+    color: var(--secondary-color);
+    background-color: var(--branding-color);
+}
+
+
 
 .hero {
     background-color: var(--branding-color);
