--- a/styles/style.css
+++ b/styles/style.css
@@ -21,49 +21,21 @@ p {
     line-height: 30px;
 }
 
-footer {
-    background-color: var(--branding-color);
-    width: auto;
-    padding: 15px 0;
+/*-------nav-bar--------*/
+.navbar {
+    background: var(--branding-color)!important;
 }
 
-.footer-text {
-   font-size:16px; 
+.nav-link {
+    color: var(--secondary-color)!important;
 }
 
-.footer-text a{
-   color: var(--secondary-color);
-   font-size:16px; 
-   text-decoration: none;
-   
+.navbar-brand {
+    color: var(--secondary-color)!important;
 }
 
-footer .email-link{
-    color: black;
-    font-size: 24px;
-    text-decoration: none;
-}
-
-footer .email-link:hover{
-    color:var(--secondary-color); 
-    text-decoration: underline;
-}
-
-footer .social-links a {
- background-color: var(--secondary-color);
- color: var(--branding-color);
- border-radius: 50%;
- font-size: 18px;
- margin: 0 20px;
- padding: 10px 14px;
- transition: all 150ms ease-in-out;
-}
-
-footer .social-links a:hover {
-    background-color: var(--branding-color);
-    color: var(--secondary-color); 
-}
-
+ 
+/*-------HOMEPAGE-------*/ 
 .hero {
     background-color: var(--branding-color);
     padding: 160px 20px;
@@ -73,30 +45,6 @@ footer .social-links a:hover {
 .hero h1 {
     font-size: 80px;
 }
-.hero .line-1{
-    font-size: 60px;
-    border-right: solid 3px #2E3C7F;
-    margin: 0 auto;
-    overflow: hidden; 
-    text-align: center;
-    white-space: nowrap;
-    }
-
-
-.hero .anim-typewriter{
-    display: flex;
-    align-items: center;
-    animation: typewriter 4s steps(20) 1s 1 normal both,
-               blinkTextCursor 600ms steps(20) infinite;
-  }
-  @keyframes typewriter{
-    from{width: 0;}
-    to{width: 480px;}
-  }
-  @keyframes blinkTextCursor{
-    from{border-right-color: #2E3C7F;}
-    to{border-right-color: transparent;}
-  }
 
 .hero h2 { 
     font-family: var(--default-font);
@@ -113,15 +61,16 @@ footer .social-links a:hover {
     margin: 0;    
 }
 
+.hero-content h2 {
+    font-size: 45px;
+}
+
 .hero .arrow-down {
     color: var(--secondary-color);
     font-size: 35px;  
 }
 
-.hero-content h2 {
-    font-size: 45px;
-}
-
+/*-------CONTENT-------*/
 .content-container{
     padding: 120px 20px;
 }
@@ -135,37 +84,54 @@ footer .social-links a:hover {
     font-size: 18px;
 }
 
-.hero .btn-branding {
+.content-section h3{
+    margin-bottom: 15px;
+    text-align: center;
+    }
+
+
+/*-------CONTACT PAGE-------*/
+.contact-title {
+    padding-left: 70px;
+    padding-top: 80px;   
+}
+
+.contact-link {
+    color: black;
+    font-weight: 300;
+    opacity: 50%;
+    text-decoration: none;
+    }
+
+
+  /*-------buttons-------*/
+  .hero .btn-branding {
     background-color: var(--secondary-color);
-    color: white;
     border-radius: 4px;
+    color: white;
     font-size: 18px;
     line-height: 27px;
     padding: 12px 20px; 
 }
 
-
-
 .container .btn-branding {
     background-color: var(--secondary-color);
-    color: white;
     border-radius: 4px;
+    color: white;
     font-size: 18px;
     line-height: 27px;
     padding: 12px 20px; 
-
 }
 
 .container .btn-branding-outline {
     background-color: var(--branding-color);
-    color: var(--secondary-color);
     border: 1px solid var(--secondary-color);
     border-radius: 4px;
+    color: var(--secondary-color);
     font-size: 18px;
     line-height: 27px;
     padding: 12px 20px; 
 }
-
 
 .btn-branding-outline:hover {
     color: var(--secondary-color)!important;
@@ -174,55 +140,66 @@ footer .social-links a:hover {
     color: white!important;
 }
 
-.content-section h3{
-text-align: center;
-margin-bottom: 15px;
+.project-buttons-dictionary{
+    position: relative;
+    top: 45px;
 }
 
-.navbar {
-    background: var(--branding-color)!important;
-}
-
-.nav-link {
-    color: var(--secondary-color)!important;
-}
-
-.navbar-brand {
-    color: var(--secondary-color)!important;
-}
-
+/*-------images-------*/ 
 .dictionary-img {
-    width:550px;
     margin: 45px 0;
+    width:550px;
 }
 
 .img-project {
     width: 550px;
 }
 
-.project-buttons-dictionary{
-    position: relative;
-    top: 45px;
+.responsive-img {
+    width: 600px;
+    margin-top: 45px;
+    padding-bottom: 65px;
+    padding-left: 15px;
 }
 
 .logo {
-  max-width: 50px;  
-}
+    max-width: 50px;  
+  }
 
-.contact-title {
-    padding-top: 80px;
-    padding-left: 70px;
-}
+
+/*-------animation-------*/
+.hero .line-1{
+    border-right: solid 3px #2E3C7F;
+    font-size: 60px;
+    margin: 0 auto;
+    overflow: hidden; 
+    text-align: center;
+    white-space: nowrap;
+    }
+
+.hero .anim-typewriter{
+    display: flex;
+    align-items: center;
+    animation: typewriter 4s steps(20) 1s 1 normal both,
+               blinkTextCursor 600ms steps(20) infinite;
+  }
+  @keyframes typewriter{
+    from{width: 0;}
+    to{width: 480px;}
+  }
+  @keyframes blinkTextCursor{
+    from{border-right-color: #2E3C7F;}
+    to{border-right-color: transparent;}
+  }
 
 .contact-title .line-2{
+    border-right: solid 3px #2E3C7F;
     font-size: 50px;
     text-align: center;
-    border-right: solid 3px #2E3C7F;
     white-space: nowrap;
     overflow: hidden; 
     margin: 0 auto;
     }
-
 
 .contact-title .typing{
     display: flex;
@@ -239,28 +216,59 @@ margin-bottom: 15px;
     to{border-right-color: transparent;}
   }
 
-.contact-link {
-font-weight: 300;
-text-decoration: none;
-color: black;
-opacity: 50%;
+
+/*-------footer-------*/
+
+footer {
+    background-color: var(--branding-color);
+    padding: 15px 0;
+    width: auto;
 }
+
+footer .email-link{
+    color: black;
+    font-size: 24px;
+    text-decoration: none;
+}
+
+footer .email-link:hover{
+    color:var(--secondary-color); 
+    text-decoration: underline;
+}
+
+footer .social-links a {
+    background-color: var(--secondary-color);
+    border-radius: 50%;
+    color: var(--branding-color);
+    font-size: 18px;
+    margin: 0 20px;
+    padding: 10px 14px;
+    transition: all 150ms ease-in-out;
+   }
+   
+   footer .social-links a:hover {
+       background-color: var(--branding-color);
+       color: var(--secondary-color); 
+   }
+
+   .footer-text {
+    font-size:16px; 
+   }
+ 
+ .footer-text a{
+    color: var(--secondary-color);
+    font-size:16px; 
+    text-decoration: none;
+}
+
+
+/*-------@media queries-------*/
 
 @media(max-width:960px) {
 
-    
    .project-description{
         padding: 0; 
         text-align: center;
-    }
-
-    .content-container {
-        text-align: center;
-        padding-top: 100px;
-    }
-
-    .content-container h1 {
-        font-size: 50px;
     }
 
     .project-buttons-dictionary{
@@ -268,10 +276,22 @@ opacity: 50%;
         top: 0;
     }
 
-    .logo-name {
-    visibility: hidden;
-}
+    .content-container {
+        padding-top: 100px;
+        text-align: center;  
+    }
 
+    .content-container h1 {
+        font-size: 50px;
+    }
+
+    .contact-title {
+        padding-top: 10px;;
+    }
+
+    .logo-name {
+        visibility: hidden;
+    }
 
     .hero .line-1{
         font-size: 43px;
@@ -288,7 +308,6 @@ opacity: 50%;
         from{width: 0;}
         to{width: 100%;}
       }
-
 
     .contact-title .line-2{
         font-size: 30px;
@@ -310,10 +329,6 @@ opacity: 50%;
             from{width: 0;}
             to{width: 250px;}
           }
-    .contact-title {
-        padding-top: 10px;;
-    }
-
     }
      
 
